# dnsspoof

./: Makefile.in  README  configure  configure.in  dnsspoof.c
missing/: strlcat.h  strlcpy.h
